# EldenTree

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  benchmark.cpp
event_handler/: CMakeLists.txt  event_handler.cpp  event_handler.h
scripts/: .clang-format  format_code.sh
tests/: CMakeLists.txt  event_handler_test.cpp
